; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_elf.c_bfd_elf_get_dyn_lib_class.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_elf.c_bfd_elf_get_dyn_lib_class.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bfd_target_elf_flavour = common dso_local global i64 0, align 8
@bfd_object = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bfd_elf_get_dyn_lib_class(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i64 @bfd_get_flavour(i32* %4)
  %6 = load i64, i64* @bfd_target_elf_flavour, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %16

8:                                                ; preds = %1
  %9 = load i32*, i32** %2, align 8
  %10 = call i64 @bfd_get_format(i32* %9)
  %11 = load i64, i64* @bfd_object, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %16

13:                                               ; preds = %8
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @elf_dyn_lib_class(i32* %14)
  store i32 %15, i32* %3, align 4
  br label %17

16:                                               ; preds = %8, %1
  store i32 0, i32* %3, align 4
  br label %17

17:                                               ; preds = %16, %13
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i64 @bfd_get_flavour(i32*) #1

declare dso_local i64 @bfd_get_format(i32*) #1

declare dso_local i32 @elf_dyn_lib_class(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
